<?xml version="1.0" encoding="utf-8"?>
<com.example.customradiogroupdemo.radiobutton.CustomRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_custom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/first_question"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/formulary_first_question"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.customradiogroupdemo.radiobutton.types.OneFieldCustomRadioButton
        android:id="@+id/first_question_first_answer"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:layout_constraintEnd_toStartOf="@+id/first_question_second_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_question"
        app:title_rb_one_field="@string/formulary_first_question_first_answer_title" />

    <com.example.customradiogroupdemo.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/first_question_second_answer"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/formulary_first_question_second_answer_description"
        app:layout_constraintBottom_toBottomOf="@id/first_question_first_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_question_first_answer"
        app:title_rb_two_fields="@string/formulary_first_question_second_answer_title" />

    <com.example.customradiogroupdemo.radiobutton.types.ThreeFieldsCustomRadioButton
        android:id="@+id/first_question_third_answer"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_three_fields="@string/formulary_first_question_third_answer_description"
        app:image_rb_three_fields="@drawable/ic_close_black"
        app:layout_constraintEnd_toStartOf="@+id/first_question_fourth_answer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_question_first_answer"
        app:title_rb_three_fields="@string/formulary_first_question_third_answer_title" />

    <com.example.customradiogroupdemo.radiobutton.types.TwoFieldsCustomRadioButton
        android:id="@+id/first_question_fourth_answer"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_custom_radio_buttons_unselected_state"
        app:description_rb_two_fields="@string/formulary_first_question_fourth_answer_description"
        app:layout_constraintBottom_toBottomOf="@id/first_question_third_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/first_question_third_answer"
        app:title_rb_two_fields="@string/formulary_first_question_fourth_answer_title" />

</com.example.customradiogroupdemo.radiobutton.CustomRadioGroup>